force-app/main/default/objects/Transaction_Line__c/Transaction_Line__c.object-meta.xml
<CustomObject>
    <label>Transaction Line</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>