force-app/main/default/objects/Transaction_Line__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>