force-app/main/default/objects/Transaction_Line__c/fields/get_fee_name__c.field-meta.xml
<CustomField>
    <fullName>get_fee_name__c</fullName>
    <formula>IF( ISPICKVAL( Type__c  , &apos;Fee&apos;), &quot;Fee: &quot; &amp;Fee__r.Name ,
IF( ISPICKVAL( Type__c , &apos;Interest&apos;) , TEXT(Type__c ) ,
IF( ISPICKVAL( Type__c , &apos;Principal&apos;) , TEXT(Type__c ),
IF( ISPICKVAL( Type__c , &apos;Interest Accrued&apos;) , TEXT(Type__c ),
&apos;&apos;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>get fee name</label>
    <type>Text</type>
</CustomField>