force-app/main/default/objects/Transaction_Line__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <formula>IF(Amount__c&lt;0,(-1)*Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>