force-app/main/default/objects/Transaction_Line__c/fields/Total_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit__c</fullName>
    <formula>IF(Amount__c&gt;0,Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>